--- a/prod.env.example
+++ b/prod.env.example
@@ -9,9 +9,11 @@ RAW_SEARCH_RESULT_STORAGE_DAYS=2
 SAVE_SEARCH_RESULT_AS_JSON=true
 SAVE_RAW_SEARCH_RESULT_AS_JSON=true
 MONGO_ADDRESS=
+SEARCH_REQUESTS_RESOURCE_ADDRESS=http://search-queue-manager:8080
+TOP_HOTELS_RESOURCE_ADDRESS=http://search-result-calculator:8080
 FIRESTORE_PROJECT_ID=kingboo
 FIRESTORE_CLIENT_EMAIL=
-FIRESTORE_CLIENT_KEY=
+FIRESTORE_CLIENT_KEY=should-have-escaped-new-line-chars
 MQ_ADDRESS=
 MQ_COLLECTING_SCENARIO_QUEUE_NAME=collecting-scenario
 MQ_DATA_COLLECTION_NOTIFICATIONS_QUEUE_NAME=data-collection-notifications
