--- a/dev.env
+++ b/dev.env
@@ -1,8 +1,10 @@
 NODE_ENV=dev
 PORT=8080
 LOG_LEVEL=debug
-CORS_ORIGINS=http://localhost:30000
+CORS_ORIGINS=http://localhost:3000
 MONGO_ADDRESS=mongodb://mongo:27017/dev
+SEARCH_REQUESTS_RESOURCE_ADDRESS=http://search-queue-manager:8080
+TOP_HOTELS_RESOURCE_ADDRESS=http://search-result-calculator:8080
 FIRESTORE_PROJECT_ID=dev
 FIRESTORE_EMULATOR_HOST=firestore
 FIRESTORE_EMULATOR_PORT=8080
