--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,11 @@
 version: "3.7"
 services:
+  user-service:
+    env_file:
+      - prod.env
+    volumes:
+      - ./compose-output:/usr/src/app/dist/apps/user-service/output
+
   search-queue-manager:
     env_file:
       - prod.env
@@ -12,17 +18,17 @@ services:
     volumes:
       - ./compose-output:/usr/src/app/dist/apps/data-collector/output
 
-  data-collector-b:
-    build:
-      context: ./backend
-      dockerfile: kb-data-collector.Dockerfile
-    image: kb-data-collector
-    env_file:
-      - prod.env
-    environment:
-      APP_LABEL: DCB
-    volumes:
-    - ./compose-output:/usr/src/app/dist/apps/data-collector/output
+#  data-collector-b:
+#    build:
+#      context: ./backend
+#      dockerfile: kb-data-collector.Dockerfile
+#    image: kb-data-collector
+#    env_file:
+#      - prod.env
+#    environment:
+#      APP_LABEL: DCB
+#    volumes:
+#      - ./compose-output:/usr/src/app/dist/apps/data-collector/output
 
   search-result-calculator:
     env_file:
