--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,16 @@
 version: "3.7"
 services:
-#  user-service:
-#    build:
-#      context: ./backend
-#      dockerfile: backend/kb-user-service.Dockerfile
-#    image: kb-user-service
-#    volumes:
-#      - ./compose-output:/usr/src/app/dist/apps/user-service/output
-#      - ./tools/wait-for-it.sh:/wait-for-it.sh
-#    ports:
-#      - 38080:8080
-#    command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "main"]
+  user-service:
+    build:
+      context: ./backend
+      dockerfile: kb-user-service.Dockerfile
+    image: kb-user-service
 
   search-queue-manager:
     build:
       context: ./backend
       dockerfile: kb-search-queue-manager.Dockerfile
     image: kb-search-queue-manager
-    ports:
-      - 38081:8080
 
   data-collector:
     build:
@@ -31,8 +23,6 @@ services:
       context: ./backend
       dockerfile: kb-search-result-calculator.Dockerfile
     image: kb-search-result-calculator
-    ports:
-      - 38082:8080
 
   webapp:
     build:
@@ -41,6 +31,3 @@ services:
     image: kb-webapp
     ports:
       - 30000:80
-    environment:
-      REACT_APP_SEARCH_QUEUE_MANAGER_ADDRESS: 'http://localhost:38081'
-      REACT_APP_SEARCH_RESULT_CALCULATOR_ADDRESS: 'http://localhost:38082'
