--- a/webapp/nginx/conf.d/default.conf
+++ b/webapp/nginx/conf.d/default.conf
@@ -1,6 +1,30 @@
+upstream user-service {
+    server user-service:8080;
+}
+
 server {
 
   listen 80;
+
+  location /api/ {
+      proxy_pass http://user-service/api/;
+      proxy_http_version 1.1;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  location ~* socket\.io {
+      proxy_pass http://user-service;
+      proxy_http_version 1.1;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+  }
 
   location / {
     root   /usr/share/nginx/html;
@@ -13,5 +37,4 @@ server {
   location = /50x.html {
     root   /usr/share/nginx/html;
   }
-
 }
