--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -25,9 +25,9 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-webapp-ci-${{ hashFiles('backend/package-lock.json') }}
+          key: ${{ runner.os }}-backend-ci-${{ hashFiles('backend/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-webapp-ci-
+            ${{ runner.os }}-backend-ci-
 
       - name: Install dependencies
         working-directory: ./backend
@@ -66,10 +66,11 @@ jobs:
           sed -i 's#__MQ_ADDRESS__#'"$MQ_ADDRESS"'#' app.yaml
           sed -i 's#__SEARCH_REQUESTS_RESOURCE_ADDRESS__#'"$SEARCH_REQUESTS_RESOURCE_ADDRESS"'#' app.yaml
           sed -i 's#__TOP_HOTELS_RESOURCE_ADDRESS__#'"$TOP_HOTELS_RESOURCE_ADDRESS"'#' app.yaml
+          cat app.yaml
           gcloud config set project ${{ secrets.GCLOUD_PROJECT }}
           gcloud -q app deploy -v $GITHUB_SHA
 
       - name: Deploy dispatch to app engine
         working-directory: ./cloud/gcp/backend
         run: |
-          gcloud -q app deploy-v $GITHUB_SHA dispatch.yaml
+          gcloud -q app deploy dispatch.yaml -v $GITHUB_SHA
