--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -56,17 +56,16 @@ jobs:
           SEARCH_REQUESTS_RESOURCE_ADDRESS: ${{ secrets.SEARCH_REQUESTS_RESOURCE_ADDRESS }}
           TOP_HOTELS_RESOURCE_ADDRESS: ${{ secrets.TOP_HOTELS_RESOURCE_ADDRESS }}
         run: |
-          echo "CORS_ORIGINS $CORS_ORIGINS"
-          echo "LOG_COLLECTOR_TOKEN $LOG_COLLECTOR_TOKEN"
-          echo "MQ_ADDRESS $MQ_ADDRESS"
-          echo "SEARCH_REQUESTS_RESOURCE_ADDRESS $SEARCH_REQUESTS_RESOURCE_ADDRESS"
-          echo "TOP_HOTELS_RESOURCE_ADDRESS $TOP_HOTELS_RESOURCE_ADDRESS"
           sed -i 's#__CORS_ORIGINS__#'"$CORS_ORIGINS"'#' app.yaml
           sed -i 's#__LOG_COLLECTOR_TOKEN__#'"$LOG_COLLECTOR_TOKEN"'#' app.yaml
           sed -i 's#__MQ_ADDRESS__#'"$MQ_ADDRESS"'#' app.yaml
           sed -i 's#__SEARCH_REQUESTS_RESOURCE_ADDRESS__#'"$SEARCH_REQUESTS_RESOURCE_ADDRESS"'#' app.yaml
           sed -i 's#__TOP_HOTELS_RESOURCE_ADDRESS__#'"$TOP_HOTELS_RESOURCE_ADDRESS"'#' app.yaml
-          cat app.yaml
+          ll
+          cd dist
+          ll
+          cd apps
+          ll
           gcloud config set project ${{ secrets.GCLOUD_PROJECT }}
           gcloud -q app deploy -v $GITHUB_SHA
 
