--- a/cloud/gcp/backend/user-service/package.json
+++ b/cloud/gcp/backend/user-service/package.json
@@ -2,6 +2,6 @@
   "name": "gcp-user-service",
   "version": "0.0.1",
   "scripts": {
-    "start": "node dist/apps/user-service/src/main"
+    "start": "node dist/apps/user-service/src/main.js"
   }
 }
