--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -38,7 +38,8 @@ jobs:
         working-directory: ./backend
         run: |
           npm run build:us
-          mv dist/* ../cloud/gcp/backend/user-service/dist
+          mv dist ../cloud/gcp/backend/user-service
+          jq
 
       - name: GCP authenticate as service account
         uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
