--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           npm run build:us
           mv dist/* ../cloud/gcp/backend/user-service/dist
-          jq
+          jq -n 'input | .dependencies |= input.dependencies' ../cloud/gcp/backend/user-service/us-package.json package.json > ../cloud/gcp/backend/user-service/package.json
 
       - name: GCP authenticate as service account
         uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
