--- a/cloud/gcp/backend/user-service/package.json
+++ b/cloud/gcp/backend/user-service/package.json
@@ -1,7 +1,3 @@
 {
-  "name": "gcp-user-service",
-  "version": "0.0.1",
-  "scripts": {
-    "start": "node dist/apps/user-service/main.js"
-  }
+  "name": "to-be-replaced"
 }
