--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -39,7 +39,17 @@ jobs:
         run: |
           npm run build:us
           mv dist/* ../cloud/gcp/backend/user-service/dist
-          jq -n 'input | .dependencies |= input.dependencies' ../cloud/gcp/backend/user-service/us-package.json package.json > ../cloud/gcp/backend/user-service/package.json
+
+      - name: Add dependencies to temp package.json
+          working-directory: ./backend
+          run: |
+            jq -n 'input | .dependencies |= input.dependencies' ../cloud/gcp/backend/user-service/package.json package.json > ../cloud/gcp/backend/user-service/temp-package.json
+
+      - name: Replace target package.json with temp package.json
+          working-directory: ./cloud/gcp/backend/user-service
+          run: |
+            rm package.json
+            mv temp-package.json package.json
 
       - name: GCP authenticate as service account
         uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
