--- a/cloud/gcp/backend/user-service/package.json
+++ b/cloud/gcp/backend/user-service/package.json
@@ -1,3 +1,7 @@
 {
-  "name": "to-be-replaced"
+  "name": "gcp-user-service",
+  "version": "0.0.1",
+  "scripts": {
+    "start": "node dist/apps/user-service/main.js"
+  }
 }
