--- a/cloud/gcp/backend/user-service/package.json
+++ b/cloud/gcp/backend/user-service/package.json
@@ -1,5 +1,6 @@
 {
   "name": "gcp-user-service",
+  "description": "will be filled with dependencies during the deploy process",
   "version": "0.0.1",
   "scripts": {
     "start": "node dist/apps/user-service/main.js"
