--- a/cloud/gcp/backend/user-service/app.yaml
+++ b/cloud/gcp/backend/user-service/app.yaml
@@ -10,6 +10,7 @@ env_variables:
   LOG_COLLECTOR_TOKEN: "__LOG_COLLECTOR_TOKEN__"
   MQ_ADDRESS: "__MQ_ADDRESS__"
   MQ_USER_NOTIFICATIONS_QUEUE_NAME: user-notifications
+  MQ_USER_NOTIFICATIONS_QUEUE_MESSAGE_TTL: 10000
   SEARCH_REQUESTS_RESOURCE_ADDRESS: "__SEARCH_REQUESTS_RESOURCE_ADDRESS__"
   TOP_HOTELS_RESOURCE_ADDRESS: "__TOP_HOTELS_RESOURCE_ADDRESS__"
 
