update github actions trigger branch

--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -2,9 +2,7 @@ name: Deploy user-service
 on:
   push:
     branches:
-      # TODO: change to master
-      # TODO: change CORS_ORIGINS env for webapp
-      - initial-webapp
+      - master
     paths:
       - 'backend/**'
       - 'cloud/gcp/backend/**'
