--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -2,8 +2,7 @@ name: Deploy webapp
 on:
   push:
     branches:
-# TODO: change to master
-      - develop
+      - master
     paths:
       - 'webapp/**'
       - 'cloud/gcp/webapp/**'
