introduce compose prod config

--- a/.github/workflows/deploy-to-westus00.yml
+++ b/.github/workflows/deploy-to-westus00.yml
@@ -71,6 +71,6 @@ jobs:
             echo "MONGO_ADDRESS=$MONGO_ADDRESS" >> westus00.env
             echo "MQ_ADDRESS=$MQ_ADDRESS" >> westus00.env
             docker-compose pull
-            docker-compose up -d
+            docker-compose -f docker-compose.yml -f prod.yml up -d
             docker image prune -f
           EOF
