--- a/.github/workflows/deploy-to-westus01.yml
+++ b/.github/workflows/deploy-to-westus01.yml
@@ -60,6 +60,6 @@ jobs:
             echo "MQ_ADDRESS=$MQ_ADDRESS" >> westus01.env
             echo "MONGO_ADDRESS=$MONGO_ADDRESS" >> westus01.env
             docker-compose pull
-            docker-compose up -d
+            docker-compose -f docker-compose.yml -f prod.yml up -d
             docker image prune -f
           EOF
