--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "test:e2e": "jest --config ./apps/user-service/test/jest-e2e.json"
   },
   "dependencies": {
+    "@google-cloud/firestore": "4.1.1",
     "@hapi/joi": "17.1.1",
     "@nestjs/common": "7.3.2",
     "@nestjs/core": "7.3.2",
@@ -37,9 +38,9 @@
     "@nestjs/mongoose": "7.0.2",
     "@nestjs/platform-express": "7.3.2",
     "@nestjs/schedule": "0.4.0",
-    "@google-cloud/firestore": "4.1.1",
     "amqp-connection-manager": "3.2.0",
     "amqplib": "0.6.0",
+    "cache-manager": "3.3.0",
     "humio-winston": "1.0.6",
     "mongoose": "5.9.25",
     "puppeteer": "5.2.1",
