--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "4.11.0",
+    "@material-ui/lab": "5.0.0-alpha.7",
     "@material-ui/icons": "4.9.1",
     "@testing-library/jest-dom": "5.11.1",
     "@testing-library/react": "10.4.7",
