encode query param before rest call

--- a/cloud/gcp/backend/user-service/app.yaml
+++ b/cloud/gcp/backend/user-service/app.yaml
@@ -12,7 +12,7 @@ env_variables:
   MQ_USER_NOTIFICATIONS_QUEUE_NAME: user-notifications
   MQ_USER_NOTIFICATIONS_QUEUE_MESSAGE_TTL: 10000
   SEARCH_REQUESTS_RESOURCE_ADDRESS: "__SEARCH_REQUESTS_RESOURCE_ADDRESS__"
-  TOP_HOTELS_RESOURCE_ADDRESS: "__TOP_HOTELS_RESOURCE_ADDRESS__"
+  HOTELS_RESOURCE_ADDRESS: "__HOTELS_RESOURCE_ADDRESS__"
 
 automatic_scaling:
   min_instances: 0
