--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -62,13 +62,13 @@ jobs:
           LOG_COLLECTOR_TOKEN: ${{ secrets.LOG_COLLECTOR_TOKEN }}
           MQ_ADDRESS: ${{ secrets.MQ_ADDRESS }}
           SEARCH_REQUESTS_RESOURCE_ADDRESS: ${{ secrets.SEARCH_REQUESTS_RESOURCE_ADDRESS }}
-          TOP_HOTELS_RESOURCE_ADDRESS: ${{ secrets.TOP_HOTELS_RESOURCE_ADDRESS }}
+          HOTELS_RESOURCE_ADDRESS: ${{ secrets.HOTELS_RESOURCE_ADDRESS }}
         run: |
           sed -i 's#__CORS_ORIGINS__#'"$CORS_ORIGINS"'#' app.yaml
           sed -i 's#__LOG_COLLECTOR_TOKEN__#'"$LOG_COLLECTOR_TOKEN"'#' app.yaml
           sed -i 's#__MQ_ADDRESS__#'"$MQ_ADDRESS"'#' app.yaml
           sed -i 's#__SEARCH_REQUESTS_RESOURCE_ADDRESS__#'"$SEARCH_REQUESTS_RESOURCE_ADDRESS"'#' app.yaml
-          sed -i 's#__TOP_HOTELS_RESOURCE_ADDRESS__#'"$TOP_HOTELS_RESOURCE_ADDRESS"'#' app.yaml
+          sed -i 's#__HOTELS_RESOURCE_ADDRESS__#'"$HOTELS_RESOURCE_ADDRESS"'#' app.yaml
           gcloud config set project ${{ secrets.GCLOUD_PROJECT }}
           gcloud -q app deploy -v $GITHUB_SHA
 
