--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,8 +4,14 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "4.11.0",
-    "@material-ui/lab": "5.0.0-alpha.7",
+    "@material-ui/lab": "4.0.0-alpha.56",
     "@material-ui/icons": "4.9.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-router-dom": "5.2.0",
+    "rxjs": "6.6.2"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "5.11.1",
     "@testing-library/react": "10.4.7",
     "@testing-library/user-event": "12.0.15",
@@ -14,11 +20,7 @@
     "@types/react": "16.9.43",
     "@types/react-dom": "16.9.8",
     "@types/react-router-dom": "5.1.5",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.1",
-    "rxjs": "6.6.2",
+    "react-scripts": "3.4.3",
     "typescript": "3.9.7"
   },
   "scripts": {
