--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "4.11.0",
     "@material-ui/lab": "4.0.0-alpha.56",
     "@material-ui/icons": "4.9.1",
+    "date-fns": "2.16.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-router-dom": "5.2.0",
