add missing env vars

--- a/cloud/gcp/backend/user-service/app.yaml
+++ b/cloud/gcp/backend/user-service/app.yaml
@@ -9,6 +9,7 @@ env_variables:
   CORS_ORIGINS: "__CORS_ORIGINS__"
   LOG_COLLECTOR_TOKEN: "__LOG_COLLECTOR_TOKEN__"
   MQ_ADDRESS: "__MQ_ADDRESS__"
+  MONGO_ADDRESS: "__MONGO_ADDRESS__"
   MQ_USER_NOTIFICATIONS_QUEUE_NAME: user-notifications
   MQ_USER_NOTIFICATIONS_QUEUE_MESSAGE_TTL: 10000
   SEARCH_REQUESTS_RESOURCE_ADDRESS: "__SEARCH_REQUESTS_RESOURCE_ADDRESS__"
