--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -44,9 +44,11 @@ jobs:
       - name: GCP authenticate as service account
         uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
+          project_id: ${{ secrets.GCLOUD_PROJECT }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
 
       - name: Deploy to app engine
         working-directory: ./cloud/gcp/webapp
         run: |
+#          gcloud config set project ${{ secrets.GCLOUD_PROJECT }}
           gcloud -q app deploy -v $GITHUB_SHA
