--- a/.github/workflows/deploy-to-westus01.yml
+++ b/.github/workflows/deploy-to-westus01.yml
@@ -3,63 +3,82 @@ on:
   push:
     branches:
       - master
+      - develop
     paths:
       - 'backend/**'
       - 'cloud/opc/westus01/**'
       - '.github/workflows/deploy-to-westus01.yml'
 
 jobs:
-  publish_data-collector:
+  copy_cassandra_secure_bundle:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
 
-      # takes branch name as a tag
-      # in case of master takes 'latest'
-      # in case of PR takes $GITHUB_SH
-      - name: Publish data-collector to registry
-        uses: elgohr/Publish-Docker-Github-Action@master
+      - name: GCP authenticate as service account
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
-          name: piotrwest/kb-data-collector
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASS }}
-          workdir: backend
-          dockerfile: kb-data-collector.Dockerfile
+          project_id: ${{ secrets.GCLOUD_PROJECT }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
 
-  deploy_data-collector:
-    needs: [publish_data-collector]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-
-      - uses: webfactory/ssh-agent@master
-        with:
-          ssh-private-key: ${{ secrets.WESTUS01_KEY }}
-
-      - name: Deploy services to westus01
-        env:
-          CORS_ORIGINS: ${{ secrets.CORS_ORIGINS }}
-          LOG_COLLECTOR_TOKEN: ${{ secrets.LOG_COLLECTOR_TOKEN }}
-          FIRESTORE_PROJECT_ID: ${{ secrets.FIRESTORE_PROJECT_ID }}
-          FIRESTORE_CLIENT_EMAIL: ${{ secrets.FIRESTORE_CLIENT_EMAIL }}
-          FIRESTORE_CLIENT_KEY: ${{ secrets.FIRESTORE_CLIENT_KEY }}
-          MQ_ADDRESS: ${{ secrets.MQ_ADDRESS }}
-          MONGO_ADDRESS: ${{ secrets.MONGO_ADDRESS }}
+      - name: Copy secure bundle from GCP bucket
         run: |
-          ssh -T -o StrictHostKeyChecking=no -l ${{ secrets.WESTUS01_USER }} ${{ secrets.WESTUS01_HOST }} << EOF
-            uptime
-            cd ~/app
-            git fetch
-            git reset --hard origin/master
-            cd cloud/opc/westus01
-            echo "CORS_ORIGINS=$CORS_ORIGINS" >> westus01.env
-            echo "LOG_COLLECTOR_TOKEN=$LOG_COLLECTOR_TOKEN" >> westus01.env
-            echo "FIRESTORE_PROJECT_ID=$FIRESTORE_PROJECT_ID" >> westus01.env
-            echo "FIRESTORE_CLIENT_EMAIL=$FIRESTORE_CLIENT_EMAIL" >> westus01.env
-            echo "FIRESTORE_CLIENT_KEY=$FIRESTORE_CLIENT_KEY" >> westus01.env
-            echo "MQ_ADDRESS=$MQ_ADDRESS" >> westus01.env
-            echo "MONGO_ADDRESS=$MONGO_ADDRESS" >> westus01.env
-            docker-compose pull
-            docker-compose -f docker-compose.yml -f prod.yml up -d
-            docker image prune -f
-          EOF
+          gsutil cp gs://cassandra-secure-bundle/secure-connect-kingboo.zip ./backend/db/cassandra
+          cd backend/db/cassandra
+          ls -a
+
+#  publish_data-collector:
+#    needs: [copy_cassandra_secure_bundle]
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v1
+#
+#      # takes branch name as a tag
+#      # in case of master takes 'latest'
+#      # in case of PR takes $GITHUB_SH
+#      - name: Publish data-collector to registry
+#        uses: elgohr/Publish-Docker-Github-Action@master
+#        with:
+#          name: piotrwest/kb-data-collector
+#          username: ${{ secrets.DOCKER_USER }}
+#          password: ${{ secrets.DOCKER_PASS }}
+#          workdir: backend
+#          dockerfile: kb-data-collector.Dockerfile
+#
+#  deploy_data-collector:
+#    needs: [publish_data-collector]
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v1
+#
+#      - uses: webfactory/ssh-agent@master
+#        with:
+#          ssh-private-key: ${{ secrets.WESTUS01_KEY }}
+#
+#      - name: Deploy services to westus01
+#        env:
+#          CORS_ORIGINS: ${{ secrets.CORS_ORIGINS }}
+#          LOG_COLLECTOR_TOKEN: ${{ secrets.LOG_COLLECTOR_TOKEN }}
+#          FIRESTORE_PROJECT_ID: ${{ secrets.FIRESTORE_PROJECT_ID }}
+#          FIRESTORE_CLIENT_EMAIL: ${{ secrets.FIRESTORE_CLIENT_EMAIL }}
+#          FIRESTORE_CLIENT_KEY: ${{ secrets.FIRESTORE_CLIENT_KEY }}
+#          MQ_ADDRESS: ${{ secrets.MQ_ADDRESS }}
+#          MONGO_ADDRESS: ${{ secrets.MONGO_ADDRESS }}
+#        run: |
+#          ssh -T -o StrictHostKeyChecking=no -l ${{ secrets.WESTUS01_USER }} ${{ secrets.WESTUS01_HOST }} << EOF
+#            uptime
+#            cd ~/app
+#            git fetch
+#            git reset --hard origin/master
+#            cd cloud/opc/westus01
+#            echo "CORS_ORIGINS=$CORS_ORIGINS" >> westus01.env
+#            echo "LOG_COLLECTOR_TOKEN=$LOG_COLLECTOR_TOKEN" >> westus01.env
+#            echo "FIRESTORE_PROJECT_ID=$FIRESTORE_PROJECT_ID" >> westus01.env
+#            echo "FIRESTORE_CLIENT_EMAIL=$FIRESTORE_CLIENT_EMAIL" >> westus01.env
+#            echo "FIRESTORE_CLIENT_KEY=$FIRESTORE_CLIENT_KEY" >> westus01.env
+#            echo "MQ_ADDRESS=$MQ_ADDRESS" >> westus01.env
+#            echo "MONGO_ADDRESS=$MONGO_ADDRESS" >> westus01.env
+#            docker-compose pull
+#            docker-compose -f docker-compose.yml -f prod.yml up -d
+#            docker image prune -f
+#          EOF
