--- a/.github/workflows/deploy-to-westus01.yml
+++ b/.github/workflows/deploy-to-westus01.yml
@@ -22,10 +22,9 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
 
       - name: Copy secure bundle from GCP bucket
+        working-directory: ./backend/db/cassandra
         run: |
-          gsutil cp gs://cassandra-secure-bundle/secure-connect-kingboo.zip ./backend/db/cassandra
-          cd backend/db/cassandra
-          ls -a
+          gsutil cp gs://cassandra-secure-bundle/secure-connect-kingboo.zip .
 
 #  publish_data-collector:
 #    needs: [copy_cassandra_secure_bundle]
