--- a/prod.env.example
+++ b/prod.env.example
@@ -14,10 +14,14 @@ HOTELS_RESOURCE_ADDRESS=http://search-result-calculator:8080
 FIRESTORE_PROJECT_ID=kingboo
 FIRESTORE_CLIENT_EMAIL=
 FIRESTORE_CLIENT_KEY=should-have-escaped-new-line-chars
+ASTRA_CLUSTER_ID=
+ASTRA_CLUSTER_REGION=
+ASTRA_DB_USERNAME=
+ASTRA_DB_KEYSPACE=
+ASTRA_DB_PASSWORD=
 MQ_ADDRESS=
 MQ_COLLECTING_SCENARIO_QUEUE_NAME=collecting-scenario
 MQ_DATA_COLLECTION_NOTIFICATIONS_QUEUE_NAME=data-collection-notifications
 MQ_USER_NOTIFICATIONS_QUEUE_NAME=user-notifications
 MQ_DATA_TO_PROCESS_QUEUE_NAME=data-to-process
 MQ_USER_NOTIFICATIONS_QUEUE_MESSAGE_TTL=86400000
-
