--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -61,4 +61,7 @@ services:
       - 8555:8080
 
   cassandra:
-    image: datastax/dse-server
+    build:
+      context: ./db/cassandra
+    ports:
+      - 9042:9042
