--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -21,7 +21,8 @@ jobs:
           - 5000:5000
 
     steps:
-      - uses: actions/checkout@v2
+      - name: checkout
+        uses: actions/checkout@v2
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -34,8 +35,8 @@ jobs:
       - name: Build and push to local registry
         uses: docker/build-push-action@v2
         with:
-          context: backend
-          file: ./kb-data-collector.Dockerfile
+          context: .
+          file: ./backend/kb-data-collector.Dockerfile
           push: true
           tags: localhost:5000/piotrwest/kb-data-collector:test
 
