--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -34,10 +34,8 @@ jobs:
 
       - name: Build and push to local registry
         uses: docker/build-push-action@v2
-        env:
-          GITHUB_WORKSPACE: $GITHUB_WORKSPACE
         with:
-          context: env.GITHUB_WORKSPACE/backend
+          context: ${{GITHUB_WORKSPACE}}/backend
           file: kb-data-collector.Dockerfile
           push: true
           tags: localhost:5000/piotrwest/kb-data-collector:test
