--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Build and push to local registry
         uses: docker/build-push-action@v2
         with:
-          context: ./backend
-          file: Dockerfile
+          context: ${{github.workspace}}/backend
+          file: ./kb-data-collector.Dockerfile
           push: true
           tags: localhost:5000/piotrwest/kb-data-collector:test
 
