--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -11,7 +11,8 @@ on:
     branches:
       - master
 env:
-  DOCKER_TAG: ${{hashFiles(github.workflow)}}
+  DOCKER_TAG: dc-e2e-tests
+
 jobs:
   local_registry:
     runs-on: ubuntu-latest
