--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -40,13 +40,13 @@ jobs:
           context: backend
           file: backend/kb-data-collector.Dockerfile
           push: true
-          tags: localhost:5000/piotrwest/kb-data-collector:$DOCKER_TAG
+          tags: localhost:5000/piotrwest/kb-data-collector:${{env.DOCKER_TAG}}
 
       - name: Inspect
         run: |
           docker image ls
           docker ps -a
-          docker buildx imagetools inspect localhost:5000/piotrwest/kb-data-collector:$DOCKER_TAG
+          docker buildx imagetools inspect localhost:5000/piotrwest/kb-data-collector:${{env.DOCKER_TAG}}
 
 #  publish_data-collector:
 #    runs-on: ubuntu-latest
