--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -14,82 +14,51 @@ env:
   DOCKER_TAG: dc-e2e-tests
 
 jobs:
-  local_registry:
+  publish_data-collector:
     runs-on: ubuntu-latest
-    services:
-      registry:
-        image: registry:2
-        ports:
-          - 5000:5000
-
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - uses: actions/checkout@v2
+      - uses: docker/setup-qemu-action@v1
+      - uses: docker/setup-buildx-action@v1
+      - uses: docker/login-action@v1
         with:
-          driver-opts: network=host
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASS }}
 
-      - name: Build and push to local registry
+      - name: Publish data-collector with tag ${{env.DOCKER_TAG}} to registry
+        id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: backend
           file: backend/kb-data-collector.Dockerfile
           push: true
-          tags: localhost:5000/piotrwest/kb-data-collector:${{env.DOCKER_TAG}}
+          tags: piotrwest/kb-data-collector:${{env.DOCKER_TAG}}
 
-      - name: Inspect
-        run: |
-          docker image ls
-          docker ps -a
-          docker buildx imagetools inspect localhost:5000/piotrwest/kb-data-collector:${{env.DOCKER_TAG}}
-
-#  publish_data-collector:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v1
-#
-#      # takes branch name as a tag
-#      # in case of master takes 'latest'
-#      # in case of PR takes $GITHUB_SH
-#      - name: Publish data-collector to registry
-#        uses: elgohr/Publish-Docker-Github-Action@master
-#        with:
-#          name: piotrwest/kb-data-collector
-#          username: ${{ secrets.DOCKER_USER }}
-#          password: ${{ secrets.DOCKER_PASS }}
-#          workdir: backend
-#          dockerfile: kb-data-collector.Dockerfile
-#
   run_data-collector_e2e:
     runs-on: ubuntu-latest
-    needs: [local_registry]
+    needs: [publish_data-collector]
     services:
-#      rabbitmq:
-#        image: rabbitmq:3-management-alpine
-#        env:
-#          RABBITMQ_DEFAULT_USER: dev
-#          RABBITMQ_DEFAULT_PASS: dev
-#        volumes:
-#          - ./backend/mq/rmq-definitions.json:/etc/rabbitmq/definitions.json
-#        ports:
-#          - 15672:15672
-#          - 5672:5672
+      rabbitmq:
+        image: rabbitmq:3-management-alpine
+        env:
+          RABBITMQ_DEFAULT_USER: dev
+          RABBITMQ_DEFAULT_PASS: dev
+        volumes:
+          - ./backend/mq/rmq-definitions.json:/etc/rabbitmq/definitions.json
+        ports:
+          - 15672:15672
+          - 5672:5672
 #
 #      firebase-test:
 #        image:
 #
-#      mongo:
-#        image: mongo
-#        ports:
-#          - 27017:27017
-#
+      mongo:
+        image: mongo
+        ports:
+          - 27017:27017
+
       data-collector:
-        image: localhost:5000/piotrwest/kb-data-collector:test
+        image: piotrwest/kb-data-collector:${{env.DOCKER_TAG}}
         env:
           NODE_ENV: dev
           PORT: 8080
@@ -106,4 +75,10 @@ jobs:
           - 8080:8080
 
     steps:
-      - uses: actions/checkout@v2
+      - name: checkout
+        uses: actions/checkout@v2
+
+      - name: Inspect
+        run: |
+          docker image ls
+          docker ps -a
