--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -58,7 +58,7 @@ jobs:
           - 27017:27017
 
       data-collector:
-        image: piotrwest/kb-data-collector:${{env.DOCKER_TAG}}
+        image: piotrwest/kb-data-collector:$DOCKER_TAG
         env:
           NODE_ENV: dev
           PORT: 8080
