--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -10,12 +10,12 @@ on:
   pull_request:
     branches:
       - master
-env:
-  DOCKER_TAG: dc-e2e-tests
 
 jobs:
   publish_data-collector:
     runs-on: ubuntu-latest
+    env:
+      DOCKER_TAG: dc-e2e-tests
     steps:
       - uses: actions/checkout@v2
       - uses: docker/setup-qemu-action@v1
@@ -37,6 +37,8 @@ jobs:
   run_data-collector_e2e:
     runs-on: ubuntu-latest
     needs: [publish_data-collector]
+    env:
+      DOCKER_TAG: dc-e2e-tests
     services:
       rabbitmq:
         image: rabbitmq:3-management-alpine
@@ -57,7 +59,7 @@ jobs:
           - 27017:27017
 
       data-collector:
-        image: piotrwest/kb-data-collector:$DOCKER_TAG
+        image: piotrwest/kb-data-collector:${{env.DOCKER_TAG}}
         env:
           NODE_ENV: dev
           PORT: 8080
