--- a/.github/workflows/deploy-to-westus01.yml
+++ b/.github/workflows/deploy-to-westus01.yml
@@ -12,26 +12,27 @@ jobs:
   publish_data-collector:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-
-      # takes branch name as a tag
-      # in case of master takes 'latest'
-      # in case of PR takes $GITHUB_SH
-      - name: Publish data-collector to registry
-        uses: elgohr/Publish-Docker-Github-Action@master
+      - uses: actions/checkout@v2
+      - uses: docker/setup-buildx-action@v1
+      - uses: docker/login-action@v1
         with:
-          name: piotrwest/kb-data-collector
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASS }}
-          workdir: backend
-          dockerfile: kb-data-collector.Dockerfile
+
+      - name: Publish data-collector to registry
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: backend
+          file: backend/kb-data-collector.Dockerfile
+          push: true
+          tags: piotrwest/kb-data-collector:latest
 
   deploy_data-collector:
     needs: [publish_data-collector]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-
+      - uses: actions/checkout@v2
       - uses: webfactory/ssh-agent@master
         with:
           ssh-private-key: ${{ secrets.WESTUS01_KEY }}
