--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/user-service/test/jest-e2e.json"
+    "e2e:dc": "jest --config apps/data-collector/test/jest-e2e.js"
   },
   "dependencies": {
     "@google-cloud/firestore": "4.8.1",
@@ -57,8 +57,8 @@
     "@types/hapi__joi": "17.1.6",
     "@types/jest": "26.0.20",
     "@types/mongoose": "5.10.3",
-    "@types/puppeteer": "5.4.2",
     "@types/node": "14.14.20",
+    "@types/puppeteer": "5.4.2",
     "@types/supertest": "2.0.10",
     "@typescript-eslint/eslint-plugin": "4.13.0",
     "@typescript-eslint/parser": "4.13.0",
