--- a/.github/workflows/test-backend.yml
+++ b/.github/workflows/test-backend.yml
@@ -8,14 +8,14 @@ jobs:
   test_backend:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: '12.x'
+          node-version: '14'
 
       - name: Use cache
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
           path: ~/.npm
           key: ${{ runner.os }}-backend-ci-${{ hashFiles('backend/package-lock.json') }}
