dockerize filebeat first try

--- a/cloud/opc/westus00/docker-compose.yml
+++ b/cloud/opc/westus00/docker-compose.yml
@@ -5,3 +5,6 @@ services:
 
   search-result-calculator:
     image: piotrwest/kb-search-result-calculator:latest
+
+#  filebeat:
+#    image: docker.elastic.co/beats/filebeat-oss:7.12.0
