--- a/cloud/opc/westus01/docker-compose.yml
+++ b/cloud/opc/westus01/docker-compose.yml
@@ -2,3 +2,6 @@ version: "3.7"
 services:
   data-collector:
     image: piotrwest/kb-data-collector:latest
+
+#  filebeat:
+#    image: docker.elastic.co/beats/filebeat-oss:7.12.0
