--- a/cloud/opc/westus01/prod.yml
+++ b/cloud/opc/westus01/prod.yml
@@ -6,3 +6,10 @@ services:
       - ./../opc.env
     volumes:
       - ./../../../compose-output:/usr/src/app/dist/apps/data-collector/output
+
+#  filebeat:
+#    env_file:
+#      - westus01.env
+#    volumes:
+#      - filebeat.yml:/etc/filebeat/filebeat.yml:ro
+#      - ./../../../compose-output:/var/log/apps:ro
