--- a/cloud/opc/westus00/prod.yml
+++ b/cloud/opc/westus00/prod.yml
@@ -18,9 +18,12 @@ services:
     ports:
       - 8082:8080
 
-#  filebeat:
-#    env_file:
-#      - westus00.env
-#    volumes:
-#      - filebeat.yml:/etc/filebeat/filebeat.yml:ro
-#      - ./../../../compose-output:/var/log/apps:ro
+  filebeat:
+    image: docker.elastic.co/beats/filebeat-oss:7.12.0
+    # needs to override config file
+    command: filebeat -e -strict.perms=false
+    env_file:
+      - westus00.env
+    volumes:
+      - ./filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
+      - ./../../../compose-output:/var/log/apps:ro
