--- a/cloud/opc/westus01/prod.yml
+++ b/cloud/opc/westus01/prod.yml
@@ -7,9 +7,12 @@ services:
     volumes:
       - ./../../../compose-output:/usr/src/app/dist/apps/data-collector/output
 
-#  filebeat:
-#    env_file:
-#      - westus01.env
-#    volumes:
-#      - filebeat.yml:/etc/filebeat/filebeat.yml:ro
-#      - ./../../../compose-output:/var/log/apps:ro
+  filebeat:
+    image: docker.elastic.co/beats/filebeat-oss:7.12.0
+    # needs to override config file
+    command: filebeat -e -strict.perms=false
+    env_file:
+      - westus01.env
+    volumes:
+      - ./filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
+      - ./../../../compose-output:/var/log/apps:ro
