--- a/cloud/gcp/backend/user-service/app.yaml
+++ b/cloud/gcp/backend/user-service/app.yaml
@@ -8,8 +8,10 @@ env_variables:
   APP_LABEL: US
   CORS_ORIGINS: "__CORS_ORIGINS__"
   LOG_COLLECTOR_TOKEN: "__LOG_COLLECTOR_TOKEN__"
+  FIRESTORE_PROJECT_ID: "__FIRESTORE_PROJECT_ID__"
+  FIRESTORE_CLIENT_EMAIL: "__FIRESTORE_CLIENT_EMAIL__"
+  FIRESTORE_CLIENT_KEY: "__FIRESTORE_CLIENT_KEY__"
   MQ_ADDRESS: "__MQ_ADDRESS__"
-  MONGO_ADDRESS: "__MONGO_ADDRESS__"
   MQ_USER_NOTIFICATIONS_QUEUE_NAME: user-notifications
   MQ_USER_NOTIFICATIONS_QUEUE_MESSAGE_TTL: 60000
   SEARCH_REQUESTS_RESOURCE_ADDRESS: "__SEARCH_REQUESTS_RESOURCE_ADDRESS__"
