--- a/dev.env
+++ b/dev.env
@@ -2,6 +2,7 @@ NODE_ENV=dev
 PORT=8080
 LOG_LEVEL=debug
 CORS_ORIGINS=http://localhost:3000
+TOP_HOTELS_SELECT_LIMIT=10
 MONGO_ADDRESS=mongodb://mongo:27017/dev
 SEARCH_REQUESTS_RESOURCE_ADDRESS=http://search-queue-manager:8080
 FIRESTORE_PROJECT_ID=dev
