notify user about finish collecting of search place identifier

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -31,6 +31,8 @@ services:
   search-result-calculator:
     env_file:
       - dev.env
+    environment:
+      LOG_LEVEL: info
     volumes:
       - ./compose-output:/usr/src/app/dist/apps/search-result-calculator/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
