try to parse firestore key part 4

--- a/cloud/gcp/backend/user-service/app.yaml
+++ b/cloud/gcp/backend/user-service/app.yaml
@@ -10,7 +10,7 @@ env_variables:
   LOG_COLLECTOR_TOKEN: "__LOG_COLLECTOR_TOKEN__"
   FIRESTORE_PROJECT_ID: "__FIRESTORE_PROJECT_ID__"
   FIRESTORE_CLIENT_EMAIL: "__FIRESTORE_CLIENT_EMAIL__"
-  FIRESTORE_CLIENT_KEY: ""__FIRESTORE_CLIENT_KEY__""
+  FIRESTORE_CLIENT_KEY: "__FIRESTORE_CLIENT_KEY__"
   MQ_ADDRESS: "__MQ_ADDRESS__"
   MQ_USER_NOTIFICATIONS_QUEUE_NAME: user-notifications
   MQ_USER_NOTIFICATIONS_QUEUE_MESSAGE_TTL: 60000
