--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -60,7 +60,7 @@ jobs:
           CORS_ORIGINS: ${{ secrets.CORS_ORIGINS }}
           LOG_COLLECTOR_TOKEN: ${{ secrets.LOG_COLLECTOR_TOKEN }}
           FIRESTORE_PROJECT_ID: ${{ secrets.FIRESTORE_PROJECT_ID }}
-          FIRESTORE_CLIENT_EMAIL: ${{ secrets.FIRESTORE_CLIENT_EMAIL }}
+          FIRESTORE_SERVICE_ACCOUNT_KEY_JSON: ${{ secrets.FIRESTORE_SERVICE_ACCOUNT_KEY_JSON }}
           FIRESTORE_CLIENT_KEY: ${{ secrets.FIRESTORE_CLIENT_KEY }}
           MONGO_ADDRESS: ${{ secrets.MONGO_ADDRESS }}
           MQ_ADDRESS: ${{ secrets.MQ_ADDRESS }}
@@ -68,7 +68,7 @@ jobs:
         run: |
           sed -i 's#__CORS_ORIGINS__#'"$CORS_ORIGINS"'#' app.yaml
           sed -i 's#__FIRESTORE_PROJECT_ID__#'"$FIRESTORE_PROJECT_ID"'#' app.yaml
-          sed -i 's#__FIRESTORE_CLIENT_EMAIL__#'"$FIRESTORE_CLIENT_EMAIL"'#' app.yaml
+          sed -i 's#__FIRESTORE_SERVICE_ACCOUNT_KEY_JSON__#'"$FIRESTORE_SERVICE_ACCOUNT_KEY_JSON"'#' app.yaml
           sed -i 's#__FIRESTORE_CLIENT_KEY__#'"$FIRESTORE_CLIENT_KEY"'#' app.yaml
           sed -i 's#__LOG_COLLECTOR_TOKEN__#'"$LOG_COLLECTOR_TOKEN"'#' app.yaml
           sed -i 's#__MQ_ADDRESS__#'"$MQ_ADDRESS"'#' app.yaml
