--- a/prod.env.example
+++ b/prod.env.example
@@ -12,7 +12,7 @@ TOP_HOTELS_SELECT_LIMIT=10
 MONGO_ADDRESS=
 SEARCH_REQUESTS_RESOURCE_ADDRESS=http://search-queue-manager:8080
 FIRESTORE_PROJECT_ID=kingboo
-FIRESTORE_CLIENT_EMAIL=
+FIRESTORE_SERVICE_ACCOUNT_KEY_JSON=
 FIRESTORE_CLIENT_KEY=should-have-escaped-new-line-chars
 MQ_ADDRESS=
 MQ_COLLECTING_SCENARIO_QUEUE_NAME=collecting-scenario
