--- a/.github/workflows/deploy-to-westus01.yml
+++ b/.github/workflows/deploy-to-westus01.yml
@@ -33,6 +33,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Create firestore service accont key json
+        working-directory: ./backend
+        env:
+          FIRESTORE_SERVICE_ACCOUNT_KEY_JSON: ${{ secrets.FIRESTORE_SERVICE_ACCOUNT_KEY_JSON }}
+        run: |
+          echo "$FIRESTORE_SERVICE_ACCOUNT_KEY_JSON" >> db/firestore/service-account-key.json
+
       - uses: webfactory/ssh-agent@master
         with:
           ssh-private-key: ${{ secrets.WESTUS01_KEY }}
@@ -42,8 +50,6 @@ jobs:
           CORS_ORIGINS: ${{ secrets.CORS_ORIGINS }}
           LOG_COLLECTOR_TOKEN: ${{ secrets.LOG_COLLECTOR_TOKEN }}
           FIRESTORE_PROJECT_ID: ${{ secrets.FIRESTORE_PROJECT_ID }}
-          FIRESTORE_SERVICE_ACCOUNT_KEY_JSON: ${{ secrets.FIRESTORE_SERVICE_ACCOUNT_KEY_JSON }}
-          FIRESTORE_CLIENT_KEY: ${{ secrets.FIRESTORE_CLIENT_KEY }}
           MQ_ADDRESS: ${{ secrets.MQ_ADDRESS }}
           MONGO_ADDRESS: ${{ secrets.MONGO_ADDRESS }}
         run: |
@@ -56,8 +62,6 @@ jobs:
             echo "CORS_ORIGINS=$CORS_ORIGINS" >> westus01.env
             echo "LOG_COLLECTOR_TOKEN=$LOG_COLLECTOR_TOKEN" >> westus01.env
             echo "FIRESTORE_PROJECT_ID=$FIRESTORE_PROJECT_ID" >> westus01.env
-            echo "FIRESTORE_SERVICE_ACCOUNT_KEY_JSON=$FIRESTORE_SERVICE_ACCOUNT_KEY_JSON" >> westus01.env
-            echo "FIRESTORE_CLIENT_KEY=$FIRESTORE_CLIENT_KEY" >> westus01.env
             echo "MQ_ADDRESS=$MQ_ADDRESS" >> westus01.env
             echo "MONGO_ADDRESS=$MONGO_ADDRESS" >> westus01.env
             docker-compose pull
