--- a/prod.env.example
+++ b/prod.env.example
@@ -12,6 +12,8 @@ TOP_HOTELS_SELECT_LIMIT=10
 MONGO_ADDRESS=
 SEARCH_REQUESTS_RESOURCE_ADDRESS=http://search-queue-manager:8080
 FIRESTORE_PROJECT_ID=kingboo
+FIRESTORE_CLIENT_EMAIL=
+FIRESTORE_CLIENT_KEY=should-have-escaped-new-line-chars
 MQ_ADDRESS=
 MQ_COLLECTING_SCENARIO_QUEUE_NAME=collecting-scenario
 MQ_DATA_COLLECTION_NOTIFICATIONS_QUEUE_NAME=data-collection-notifications
@@ -19,4 +21,3 @@ MQ_USER_NOTIFICATIONS_QUEUE_NAME=user-notifications
 MQ_DATA_TO_PROCESS_QUEUE_NAME=data-to-process
 MQ_DATA_UPDATES_QUEUE_NAME=data-updates
 MQ_USER_NOTIFICATIONS_QUEUE_MESSAGE_TTL=60000
-
