--- a/cloud/opc/westus01/westus01.env
+++ b/cloud/opc/westus01/westus01.env
@@ -2,5 +2,7 @@
 # CORS_ORIGINS
 # LOG_COLLECTOR_TOKEN
 # FIRESTORE_PROJECT_ID
+# FIRESTORE_CLIENT_EMAIL
+# FIRESTORE_CLIENT_KEY
 # MONGO_ADDRESS
 # MQ_ADDRESS
