update output paths

--- a/cloud/opc/westus00/prod.yml
+++ b/cloud/opc/westus00/prod.yml
@@ -2,7 +2,7 @@ version: "3.7"
 services:
   search-queue-manager:
     volumes:
-      - ./../../../compose-output:/usr/src/app/dist/apps/search-queue-manager/output
+      - ./../../../compose-output:/usr/src/app/output
     env_file:
       - westus00.env
       - ./../opc.env
@@ -16,14 +16,14 @@ services:
     environment:
       LOG_LEVEL: info
     volumes:
-      - ./../../../compose-output:/usr/src/app/dist/apps/search-result-calculator/output
+      - ./../../../compose-output:/usr/src/app/output
 
   top-hotels-aggregator:
     env_file:
       - westus00.env
       - ./../opc.env
     volumes:
-      - ./../../../compose-output:/usr/src/app/dist/apps/top-hotels-aggregator/output
+      - ./../../../compose-output:/usr/src/app/output
 
   filebeat:
     image: docker.elastic.co/beats/filebeat-oss:7.12.0
