--- a/cloud/opc/westus01/prod.yml
+++ b/cloud/opc/westus01/prod.yml
@@ -5,7 +5,7 @@ services:
       - westus01.env
       - ./../opc.env
     volumes:
-      - ./../../../compose-output:/usr/src/app/dist/apps/data-collector/output
+      - ./../../../compose-output:/usr/src/app/output
 
   filebeat:
     image: docker.elastic.co/beats/filebeat-oss:7.12.0
