--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,7 +4,7 @@ services:
     env_file:
       - dev.env
     volumes:
-      - ./compose-output:/usr/src/app/dist/apps/user-service/output
+      - ./compose-output:/usr/src/app/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
     command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "main"]
     ports:
@@ -14,7 +14,7 @@ services:
     env_file:
       - dev.env
     volumes:
-      - ./compose-output:/usr/src/app/dist/apps/search-queue-manager/output
+      - ./compose-output:/usr/src/app/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
     command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "main"]
     ports:
@@ -24,7 +24,7 @@ services:
     env_file:
       - dev.env
     volumes:
-      - ./compose-output:/usr/src/app/dist/apps/data-collector/output
+      - ./compose-output:/usr/src/app/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
     command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "main"]
 
@@ -34,7 +34,7 @@ services:
     environment:
       LOG_LEVEL: info
     volumes:
-      - ./compose-output:/usr/src/app/dist/apps/search-result-calculator/output
+      - ./compose-output:/usr/src/app/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
     command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "main"]
 
@@ -42,7 +42,7 @@ services:
     env_file:
       - dev.env
     volumes:
-      - ./compose-output:/usr/src/app/dist/apps/top-hotels-aggregator/output
+      - ./compose-output:/usr/src/app/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
     command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "main"]
 
